--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,7 +20,7 @@ body {
     
 }
 #map {
-    align-content: center;
+    justify-content: center;
     width: 100rem;
-    height: 100rem;
+    height: 40rem;
 }
