--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -82,6 +82,7 @@
 }
 .pad2 {
 padding: 20px;
+overflow-y: auto;
 -webkit-box-sizing: border-box;
 -moz-box-sizing: border-box;
 box-sizing: border-box;
