--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,18 +32,18 @@
     font-size: 4rem;
     color: white;
 }
-.search {
-    background-color: rgb(181, 181, 181);
-    padding: 2rem 0rem;
-    margin: 1rem 1rem;
+/* .search {
+    background-color: );
+    padding: 0rem 0rem;
+    margin: 0rem 1rem;
     
-}
+} */
 #map {
     justify-content: center;
     position: fixed; 
-    top: 14rem; 
+    top: 6rem; 
     bottom: 0; 
-    left: 26%;
+    left: 31%;
     right: 1rem;
 
 }
@@ -73,10 +73,10 @@
 
 .sidebar {
     position: fixed;
-    top: 14rem; 
+    top: 6rem; 
     bottom: 0; 
-    left:1rem;
-    right: 75%;
+    left: 1rem;
+    right: 70%;
     border: solid darkgray 1px;
     
 }
@@ -86,4 +86,14 @@ overflow-y: auto;
 -webkit-box-sizing: border-box;
 -moz-box-sizing: border-box;
 box-sizing: border-box;
+}
+
+.search-item {
+    padding: 0 .5rem;
+}
+
+.search-item:hover {
+    background-color: rgb(209, 189, 7);
+    border-radius: .3rem;
+    padding: 0 .5rem;
 }
